--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera, esto no deberia ir en el commit anterior sino en este porque debia ir para la rama cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
