--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,9 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" alt="">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza mod cabecera</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
